[package]
name = "bittorent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
reqwest = "0.11.17"
hex = "0.4.3"

[dev-dependencies]
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] }
