[package]
name = "bittorent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
reqwest = "0.11.17"
hex = "0.4.3"