[package]
name = "bittorent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_bytes = "0.11.9"
serde_bencode = "0.2.3"
reqwest = { version = "0.11.17", features = ["json"] }
hex = "0.4.3"
sha1 = "0.10.5"

[dev-dependencies]
base64 = "0.21.0"
hex-literal = "0.4.1"
tokio = { version = "1.28.2", features = ["full"] }

[[example]]
name = "client"
path = "examples/client.rs"
