[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
oxide-bencode = { path = "../oxide-bencode", version = "0.1.0" }
serde_bytes = "0.11.9"
sha1 = "0.10.5"

[dev-dependencies]
hex-literal = "0.4.1"
rand = "0.8.5"
